[project]
name = "AMapMCP"
version = "0.1.0"
description = "A FastAPI and fastmcp based Amap Navigation MCP tool that provides interactive map navigation with real-time route planning and WebSocket communication."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "fastmcp>=2.10.1",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]
